@@ -1,3 +1,7 @@
+223
+
+- Deprecate custom HTTP client BodyGenerator implementations
+
 222
 
 - Update to Jetty 9.4.50.v20221201
